syntax = "proto3";
package colosseuma.colosseuma;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "colosseuma/params.proto";
import "colosseuma/coin_symbol.proto";
// this line is used by starport scaffolding # 1

option go_package = "ColosseumA/x/colosseuma/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ColosseumA/colosseuma/params";
  }
  // Queries a CoinSymbol by id.
	rpc CoinSymbol(QueryGetCoinSymbolRequest) returns (QueryGetCoinSymbolResponse) {
		option (google.api.http).get = "/ColosseumA/colosseuma/coin_symbol/{id}";
	}

	// Queries a list of CoinSymbol items.
	rpc CoinSymbolAll(QueryAllCoinSymbolRequest) returns (QueryAllCoinSymbolResponse) {
		option (google.api.http).get = "/ColosseumA/colosseuma/coin_symbol";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetCoinSymbolRequest {
	uint64 id = 1;
}

message QueryGetCoinSymbolResponse {
	CoinSymbol CoinSymbol = 1 [(gogoproto.nullable) = false];
}

message QueryAllCoinSymbolRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCoinSymbolResponse {
	repeated CoinSymbol CoinSymbol = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
